--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vue-sweetalert2": "^3.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
